infrastructure/bootstrap/infrastructure/jaeger/controller/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: rig-system
  annotations:
    cert-manager.io/cluster-issuer: kind-ca-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.kind
      http:
        paths:
          - backend:
              service:
                name: jaeger
                port:
                  number: 16686
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - jaeger.kind
      secretName: jaeger-tls
